--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "build": "npx tailwindcss -i ./stylesheets/main.src.css -o ./stylesheets/main.css"
   },
   "author": "yanko",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/jquery": "^3.5.31"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.13"
+  }
 }
