--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/jquery": "^3.5.31"
   },
   "devDependencies": {
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.13"
   }
 }
